--- a/wondergirls/index.html
+++ b/wondergirls/index.html
@@ -10,6 +10,7 @@
 <header>
   <h1><a href="index.html">원더걸스</a></h1>
   <nav>
+    <a href="" class="main_manu">main manu</a>
     <ul>
       <li><a href="">PROFILE</a></li>
       <li><a href="">DISCOGRAPHY</a></li>
